# app/docs/swagger.json
@@ -31,7 +31,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/serializer.CreateRestaurantDTO"
+                            "$ref": "#/definitions/restaurant.CreateRestaurantDTO"
                         }
                     }
                 ],
@@ -39,7 +39,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schema.Restaurant"
+                            "$ref": "#/definitions/entity.Restaurant"
                         }
                     },
                     "400": {
@@ -70,7 +70,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/serializer.AuthDataLogin"
+                            "$ref": "#/definitions/auth.AuthDataLogin"
                         }
                     }
                 ],
@@ -78,7 +78,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/service.JwtPair"
+                            "$ref": "#/definitions/auth.JwtPair"
                         }
                     },
                     "400": {
@@ -109,7 +109,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/serializer.AuthDataRefresh"
+                            "$ref": "#/definitions/auth.AuthDataRefresh"
                         }
                     }
                 ],
@@ -117,7 +117,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/service.JwtPair"
+                            "$ref": "#/definitions/auth.JwtPair"
                         }
                     },
                     "400": {
@@ -148,7 +148,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/serializer.AuthDataRegister"
+                            "$ref": "#/definitions/auth.AuthDataRegister"
                         }
                     }
                 ],
@@ -156,7 +156,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/service.JwtPair"
+                            "$ref": "#/definitions/auth.JwtPair"
                         }
                     },
                     "400": {
@@ -200,7 +200,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/schema.Estimate"
+                                "$ref": "#/definitions/entity.Estimate"
                             }
                         }
                     },
@@ -242,7 +242,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/serializer.CreateEstimateDTO"
+                            "$ref": "#/definitions/estimate.CreateEstimateDTO"
                         }
                     }
                 ],
@@ -250,7 +250,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schema.Estimate"
+                            "$ref": "#/definitions/entity.Estimate"
                         }
                     },
                     "400": {
@@ -361,7 +361,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Количество садов",
+                        "description": "Количество ресторанов",
                         "name": "limit",
                         "in": "query"
                     },
@@ -378,7 +378,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/schema.Restaurant"
+                                "$ref": "#/definitions/entity.Restaurant"
                             }
                         }
                     },
@@ -416,7 +416,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schema.Restaurant"
+                            "$ref": "#/definitions/entity.Restaurant"
                         }
                     },
                     "400": {
@@ -449,7 +449,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schema.User"
+                            "$ref": "#/definitions/entity.User"
                         }
                     },
                     "400": {
@@ -463,44 +463,77 @@
         }
     },
     "definitions": {
-        "enum.Role": {
-            "type": "string",
-            "enum": [
-                "critic",
-                "restorer",
-                "moderator",
-                "admin",
-                "helper"
-            ],
-            "x-enum-varnames": [
-                "RoleCritic",
-                "RoleRestorer",
-                "RoleModerator",
-                "RoleAdmin",
-                "RoleHelper"
-            ]
-        },
-        "helper.ErrorResponse": {
+        "auth.AuthDataLogin": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
-                "code": {
-                    "type": "integer"
+                "email": {
+                    "type": "string"
                 },
-                "message": {
+                "password": {
                     "type": "string"
                 }
             }
         },
-        "helper.Response": {
+        "auth.AuthDataRefresh": {
             "type": "object",
+            "required": [
+                "refreshToken"
+            ],
             "properties": {
-                "data": {},
-                "status": {
-                    "type": "boolean"
+                "refreshToken": {
+                    "type": "string"
                 }
             }
         },
-        "schema.Estimate": {
+        "auth.AuthDataRegister": {
+            "type": "object",
+            "required": [
+                "email",
+                "firstName",
+                "lastName",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2
+                },
+                "lastName": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.JwtPair": {
+            "type": "object",
+            "properties": {
+                "accessExpiresIn": {
+                    "type": "string"
+                },
+                "accessToken": {
+                    "type": "string"
+                },
+                "refreshExpiresIn": {
+                    "type": "string"
+                },
+                "refreshToken": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.Estimate": {
             "type": "object",
             "properties": {
                 "createdAt": {
@@ -523,7 +556,7 @@
                 }
             }
         },
-        "schema.Restaurant": {
+        "entity.Restaurant": {
             "type": "object",
             "properties": {
                 "address": {
@@ -568,7 +601,7 @@
                 }
             }
         },
-        "schema.User": {
+        "entity.User": {
             "type": "object",
             "properties": {
                 "createdAt": {
@@ -606,60 +639,24 @@
                 }
             }
         },
-        "serializer.AuthDataLogin": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
+        "enum.Role": {
+            "type": "string",
+            "enum": [
+                "critic",
+                "restorer",
+                "moderator",
+                "admin",
+                "helper"
             ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
+            "x-enum-varnames": [
+                "RoleCritic",
+                "RoleRestorer",
+                "RoleModerator",
+                "RoleAdmin",
+                "RoleHelper"
+            ]
         },
-        "serializer.AuthDataRefresh": {
-            "type": "object",
-            "required": [
-                "refreshToken"
-            ],
-            "properties": {
-                "refreshToken": {
-                    "type": "string"
-                }
-            }
-        },
-        "serializer.AuthDataRegister": {
-            "type": "object",
-            "required": [
-                "email",
-                "firstName",
-                "lastName",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 2
-                },
-                "lastName": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 2
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "serializer.CreateEstimateDTO": {
+        "estimate.CreateEstimateDTO": {
             "type": "object",
             "required": [
                 "description",
@@ -684,7 +681,27 @@
                 }
             }
         },
-        "serializer.CreateRestaurantDTO": {
+        "helper.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "helper.Response": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "status": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "restaurant.CreateRestaurantDTO": {
             "type": "object",
             "required": [
                 "name"
@@ -722,23 +739,6 @@
                     "type": "string"
                 },
                 "site": {
-                    "type": "string"
-                }
-            }
-        },
-        "service.JwtPair": {
-            "type": "object",
-            "properties": {
-                "accessExpiresIn": {
-                    "type": "string"
-                },
-                "accessToken": {
-                    "type": "string"
-                },
-                "refreshExpiresIn": {
-                    "type": "string"
-                },
-                "refreshToken": {
                     "type": "string"
                 }
             }
